user-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-app
  labels:
    app: user-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app : user-service-app
  template:
    metadata:
      labels:
        app: user-service-app
    spec:
      containers:
      - name: user-service-app
        image: dailycodebuffer/user-service:0.0.1
        imagePullPolicy: Always
        ports:
          - containerPort: 9002

---
apiVersion: v1
kind: Service
metadata:
  name: user-service-svc
  namespace: default
spec:
  selector:
    app: user-service-svc
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: user-service-svc
    protocol: TCP
    port: 80
    targetPort: 9002
